--- a/EstoqueSolucao/Atacado.Repositorio/Atacado.Repositorio.csproj
+++ b/EstoqueSolucao/Atacado.Repositorio/Atacado.Repositorio.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Atacado.DB.EF\Atacado.DB.EF.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="RH\" />
+  </ItemGroup>
+
 </Project>
