--- a/ProjetoViajeFacil/CSharp/ProjetoViajeFacil/ViajeFacil.Service/ViajeFacil.Service.csproj
+++ b/ProjetoViajeFacil/CSharp/ProjetoViajeFacil/ViajeFacil.Service/ViajeFacil.Service.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ViajeFacil.Dominio.EF\ViajeFacil.Dominio.EF.csproj" />
+    <ProjectReference Include="..\ViajeFacil.Mapping\ViajeFacil.Mapping.csproj" />
+    <ProjectReference Include="..\ViajeFacil.Poco\ViajeFacil.Poco.csproj" />
+    <ProjectReference Include="..\ViajeFacil.Repository\ViajeFacil.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
