--- a/ProjetoViajeFacil/CSharp/ProjetoViajeFacil/ViajeFacilApi/appsettings.json
+++ b/ProjetoViajeFacil/CSharp/ProjetoViajeFacil/ViajeFacilApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "ViajeFacilDB": "Data Source=psgs0071.psg.local; Initial Catalog=ViajeFacilDB; User=Academia; Password=@cadem1@555;"
+  },
   "AllowedHosts": "*"
 }
